// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error component with error text match snapshot 1`] = `
<div
  className="error-container "
>
  <img
    alt="hello world"
    src="alert.svg"
  />
  <pre>
    hello world
  </pre>
</div>
`;

exports[`Error component without error text match snapshot 1`] = `
<div
  className="error-container "
>
  <img
    alt="Something Went Wrong"
    src="alert.svg"
  />
  <pre>
    Something Went Wrong
  </pre>
</div>
`;
